merge gradle and maven to java